# SDL_Template

./: CMakeLists.txt  main.cpp
